--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,3 +16,20 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+
+  deploy:
+
+    runs-on: ubuntu-latest
+
+    # if: github.ref == 'refs/heads/main' # Uncomment this line if you want to deploy only from the main branch
+
+    needs: build
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Deploy using SSH
+      uses: webfactory/ssh-agent@v0.5.3
+      with:
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      run: |
+        ssh -o StrictHostKeyChecking=no -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd brazil-blog && git pull && docker-compose up -d --build"
