Fix deployment condition in ci.yml workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
 
   deploy:
 
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+
     environment: Develop
 
     runs-on: ubuntu-latest
