--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    # if: github.ref == 'refs/heads/main' # Uncomment this line if you want to deploy only from the main branch
+    if: github.ref == 'refs/heads/main' # Uncomment this line if you want to deploy only from the main branch
 
     needs: build
 
