--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,8 @@ services:
       - ./src:/code
     ports:
       - 8000:8000
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
