Added: Redis configuration & Preconfigure nginx already (#3)
* Remove timeout parameter

* Add Redis service to docker-compose.yml and update requirements.txt

* Remove unused requirements.txt

* Add Docker Compose file for deployment and Nginx configuration

--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -13,8 +13,20 @@ services:
       - ./src:/code
     ports:
       - 8000:8000
+      
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx:/etc/nginx/conf.d
+    depends_on:
+      - brazil-blog-web
 
   redis:
     image: redis:latest
     ports:
       - "6379:6379"
+
+volumes:
+  redis_data:
