--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,29 @@
 server {
     listen 80;
+    server_name brazil.kokokoding.nl;
+
+    # Location block for the Let's Encrypt challenge
+    location ^~ /.well-known/acme-challenge/ {
+        # Ensure that this location is served from a directory accessible by Certbot
+        # You may need to set this up in your Docker volume configuration
+        root /var/www/certbot;  # Or another directory that Certbot can write to
+        try_files $uri =404;  # Serve the file if it exists, or return a 404 error
+    }
+
+    # Redirect all other HTTP traffic to HTTPS
+    location / {
+        # Uncomment the next line if you're ready to redirect all traffic to HTTPS
+        return 301 https://$host$request_uri;
+    }
+}
+
+# HTTPS server block (add this once you have obtained the SSL certificate)
+server {
+    listen 443 ssl;
+    server_name brazil.kokokoding.nl;
+
+    ssl_certificate /etc/letsencrypt/live/brazil.kokokoding.nl/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/brazil.kokokoding.nl/privkey.pem;
 
     location / {
         proxy_pass http://brazil-blog-web:8000;
