Refactor Nginx configuration to include caching and customize caching behavior

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,20 +4,16 @@ server {
 
     # Location block for the Let's Encrypt challenge
     location ^~ /.well-known/acme-challenge/ {
-        # Ensure that this location is served from a directory accessible by Certbot
-        # You may need to set this up in your Docker volume configuration
-        root /var/www/certbot;  # Or another directory that Certbot can write to
-        try_files $uri =404;  # Serve the file if it exists, or return a 404 error
+        root /var/www/certbot;
+        try_files $uri =404;
     }
 
     # Redirect all other HTTP traffic to HTTPS
     location / {
-        # Uncomment the next line if you're ready to redirect all traffic to HTTPS
         return 301 https://$host$request_uri;
     }
 }
 
-# HTTPS server block (add this once you have obtained the SSL certificate)
 server {
     listen 443 ssl;
     server_name brazil.kokokoding.nl;
@@ -25,11 +21,30 @@ server {
     ssl_certificate /etc/letsencrypt/live/brazil.kokokoding.nl/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/brazil.kokokoding.nl/privkey.pem;
 
+    # Caching static assets
+    location ~* \.(css|js|jpg|jpeg|png|gif|ico|svg)$ {
+        expires 30d;
+        add_header Cache-Control "public";
+    }
+
+    # Dynamic content
     location / {
         proxy_pass http://brazil-blog-web:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_hide_header Set-Cookie;  # Ensuring no cookies for cached pages
+    }
+
+    # Customize caching behavior for potentially dynamic content
+    location ~* ^/header/ {
+        proxy_pass http://brazil-blog-web:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_no_cache $cookie_session;  # Avoid caching if session cookie is set
+        proxy_cache_bypass $cookie_session;
     }
 }
