Refactor Nginx configuration to remove commented out code and improve readability

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -34,17 +34,17 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_hide_header Set-Cookie;  # Ensuring no cookies for cached pages
+        # proxy_hide_header Set-Cookie;  # Ensuring no cookies for cached pages
     }
 
     # Customize caching behavior for potentially dynamic content
-    location ~* ^/header/ {
-        proxy_pass http://brazil-blog-web:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_no_cache $cookie_session;  # Avoid caching if session cookie is set
-        proxy_cache_bypass $cookie_session;
-    }
+    # location ~* ^/header/ {
+    #     proxy_pass http://brazil-blog-web:8000;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    #     proxy_no_cache $cookie_session;  # Avoid caching if session cookie is set
+    #     proxy_cache_bypass $cookie_session;
+    # }
 }
