Refactor Nginx configuration to disable caching for static assets

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -22,10 +22,10 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/brazil.kokokoding.nl/privkey.pem;
 
     # Caching static assets
-    location ~* \.(css|js|jpg|jpeg|png|gif|ico|svg)$ {
-        expires 30d;
-        add_header Cache-Control "public";
-    }
+    # location ~* \.(css|js|jpg|jpeg|png|gif|ico|svg)$ {
+    #     expires 30d;
+    #     add_header Cache-Control "public";
+    # }
 
     # Dynamic content
     location / {
