--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,11 +21,12 @@ server {
     ssl_certificate /etc/letsencrypt/live/brazil.kokokoding.nl/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/brazil.kokokoding.nl/privkey.pem;
 
-    # Caching static assets
-    # location ~* \.(css|js|jpg|jpeg|png|gif|ico|svg)$ {
-    #     expires 30d;
-    #     add_header Cache-Control "public";
-    # }
+    location /static/ {
+        root ./static;  # This path should lead to where your static directories are
+        expires 30d;
+        access_log off;
+        add_header Cache-Control "public";
+    }
 
     # Dynamic content
     location / {
@@ -37,14 +38,4 @@ server {
         # proxy_hide_header Set-Cookie;  # Ensuring no cookies for cached pages
     }
 
-    # Customize caching behavior for potentially dynamic content
-    # location ~* ^/header/ {
-    #     proxy_pass http://brazil-blog-web:8000;
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    #     proxy_no_cache $cookie_session;  # Avoid caching if session cookie is set
-    #     proxy_cache_bypass $cookie_session;
-    # }
 }
