--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -22,7 +22,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/brazil.kokokoding.nl/privkey.pem;
 
     location /static/ {
-        root /usr/share/nginx/html/static;  # This path should lead to where your static directories are
+        root /usr/share/nginx/html;  # This path should lead to where your static directories are
         expires 30d;
         access_log off;
         add_header Cache-Control "public";
