chore: Update CI workflow to use bin/manage test instead of bin/test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Test the Django / Wagtail project
-      run: bin/test
-
+      run: bin/manage test
+      
   deploy:
 
     concurrency:
