--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag brazil-blog:$(date +%s)
+      run: docker build . --file Dockerfile --tag brazil-blog-web:$(date +%s)
 
   test:
     runs-on: ubuntu-latest
@@ -25,7 +25,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Test the Django / Wagtail project
       run: bin/manage test
-      
+
   deploy:
 
     concurrency:
