--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag brazil-blog-web:$(date +%s)
+    - name: Collect static files
+      run: bin/manage collectstatic --noinput --ignore brazil_blog.css
 
   test:
     runs-on: ubuntu-latest
