ci: Add Cypress e2e smoketests for Brazil Blog
Add Cypress e2e smoketests to ensure the functionality and integrity of the Brazil Blog website. The tests include checking the homepage, blog post pages, JavaScript and CSS files, and the status codes returned. This commit also includes the necessary configuration in the `cypress.config.ts` file and the test file `smoketests.cy.ts`.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
   "name": "brazil-blog",
   "module": "index.ts",
-  "type": "module",
-  "scripts": {
-    "tailwindcss:build": "tailwindcss build -i src/brazil_blog/static/css/brazil_blog.css -o src/brazil_blog/static/css/brazil_blog_compiled.css",
-    "tailwindcss:watch": "tailwindcss build -i src/brazil_blog/static/css/brazil_blog.css -o src/brazil_blog/static/css/brazil_blog_compiled.css --watch"
-  },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
@@ -14,5 +9,11 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
-  }
+  },
+  "scripts": {
+    "tailwindcss:build": "tailwindcss build -i src/brazil_blog/static/css/brazil_blog.css -o src/brazil_blog/static/css/brazil_blog_compiled.css",
+    "tailwindcss:watch": "tailwindcss build -i src/brazil_blog/static/css/brazil_blog.css -o src/brazil_blog/static/css/brazil_blog_compiled.css --watch"
+  },
+  "type": "module",
+  "dependencies": { "cypress": "^13.10.0" }
 }
