--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,3 +50,36 @@ jobs:
     - name: Deploy to the server
       run: |
         ssh -o StrictHostKeyChecking=no -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd brazil-blog && git pull && docker compose -f docker-compose-deploy.yml up -d --build"
+
+  smoketests:
+    runs-on: ubuntu-latest
+
+    env:
+      CYPRESS_BASE_URL: "https://brazil.kokokoding.nl"
+
+    services:
+      web:
+        image: nginx:latest
+        ports:
+          - 80:80
+        options: >-
+          --mount type=bind,source=${{ github.workspace }},target=/usr/share/nginx/html
+          
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'bun'
+
+      - name: Install bun
+        run: curl -fsSL https://bun.sh/install | bash
+
+      - name: Install dependencies
+        run: bun install
+
+      - name: Run smoketests with Cypress
+        run: bunx cypress run
