--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,14 +69,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'bun'
-
-      - name: Install bun
-        run: curl -fsSL https://bun.sh/install | bash
+      - uses: oven-sh/setup-bun@v1
 
       - name: Install dependencies
         run: bun install
