--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,18 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag brazil-blog-web:$(date +%s)
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Collect static files
+      run: bin/manage collectstatic --noinput --ignore brazil_blog.css
+    - name: Test the Django / Wagtail project
+      run: bin/manage test
 
   deploy:
 
