--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,8 @@ jobs:
   smoketests:
     runs-on: ubuntu-latest
 
+    if: github.ref == 'refs/heads/main'
+
     env:
       CYPRESS_BASE_URL: "https://brazil.kokokoding.nl"
 
