chore: Add conditional execution for smoketests job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
   smoketests:
     runs-on: ubuntu-latest
 
-    if: github.ref == 'refs/heads/main'
+    needs: deploy
 
     env:
       CYPRESS_BASE_URL: "https://brazil.kokokoding.nl"
