--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag brazil-blog-web:$(date +%s)
 
@@ -22,7 +22,7 @@ jobs:
     needs: build
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Collect static files
       run: bin/manage collectstatic --noinput --ignore brazil_blog.css
     - name: Test the Django / Wagtail project
@@ -42,7 +42,7 @@ jobs:
     needs: build
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Setup SSH
       uses: webfactory/ssh-agent@v0.5.3
       with:
@@ -53,6 +53,8 @@ jobs:
 
   smoketests:
     runs-on: ubuntu-latest
+
+    needs: deploy
 
     env:
       CYPRESS_BASE_URL: "https://brazil.kokokoding.nl"
