feat: Update Python version in Dockerfile to 3.13-rc-slim
Update the Python version in the Dockerfile from 3.11-slim-buster to 3.13-rc-slim. This ensures that the application is using the latest Python version, providing access to new features and improvements. Additionally, set the PYTHON_JIT environment variable to 1 to enable just-in-time compilation for improved performance.

--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -9,6 +9,7 @@ services:
       - DJANGO_SUPERUSER_USERNAME=${DJANGO_SUPERUSER_USERNAME}
       - DJANGO_SUPERUSER_PASSWORD=${DJANGO_SUPERUSER_PASSWORD}
       - DJANGO_SUPERUSER_EMAIL=${DJANGO_SUPERUSER_EMAIL}
+      - PYTHON_JIT=1
     volumes:
       - ./src:/code
     ports:
