--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
     "[python]": {
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "charliermarsh.ruff"
-    }
+    },
+    "ruff.enable": true,
+    "ruff.lint.args": ["--config", "ruff.toml"],
+    "ruff.format.args": ["--config", "ruff.toml"],
 }
