ci: Add linting step in ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,16 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag brazil-blog-web:$(date +%s)
 
+  lint:
+
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Lint the Python code
+      run: docker run --rm brazil-blog-web:$(date +%s) bin/lint-back
+
   test:
     runs-on: ubuntu-latest
     needs: build
