--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Lint the Python code
-      run: docker run --rm brazil-blog-web:$(date +%s) bin/lint-back
+      run: bin/lint-back
 
   test:
     runs-on: ubuntu-latest
