refactor: Update Ruff configuration to ignore F403 error
The Ruff configuration file `ruff.toml` has been modified to ignore the `F403` error. This error is related to import statements and is being ignored to reduce noise in the linting output. This change improves the code quality by focusing on more critical linting issues and reducing distractions caused by false positives.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,6 @@
         "editor.defaultFormatter": "charliermarsh.ruff"
     },
     "ruff.enable": true,
-    "ruff.lint.args": ["--config", "ruff.toml"],
-    "ruff.format.args": ["--config", "ruff.toml"],
+    "ruff.lint.args": ["--config", "src/ruff.toml"],
+    "ruff.format.args": ["--config", "src/ruff.toml"],
 }
