Added: Current 🇧🇷⏳ Brazilian time in header (#39)
* feat: Update requirements.txt and add brazil_time template tag

Update requirements.txt to include the pytz package and add the brazil_time.py template tag to display the current time in São Paulo, Brazil. This improves the functionality of the blog application by providing accurate time information and enhances the user experience.

* feat(wip): Add the current 🇧🇷⏳ brazilian time in header (automatic update through javascript ain't working yet)

* config: Configure ruff as default linter & formatter

* feat: Update Brazil time display in header with automatic update

Update the code in the brazil-time.html template and the brazil_time.py templatetag to improve the display of the current Brazilian time in the header of the blog application. The previous implementation used JavaScript to update the time every second, but it was not working reliably. The updated code now fetches the current time from the server using an API endpoint and updates the display every minute. This change ensures accurate and consistent time information for users visiting the blog.

* config: Configure Ruff for VS Code

* refactor: Update Dockerfile and linting configuration

Update the Dockerfile to remove the unused file and configure the linting tool, Ruff, as the default linter and formatter. This improves the development environment by removing unnecessary files and ensuring consistent code quality through automated linting and formatting.

* refactor: Add bash script for formatting code with Ruff

A new bash script, `format-back`, has been added to the `bin` directory. This script uses `docker-compose` to run the `ruff format` command, allowing for easy code formatting using the Ruff linter and formatter. This addition improves the development workflow by providing a convenient way to format code and ensure consistent code quality.

* refactor: Update Dockerfile to use correct service name in test script

* ci:

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,34 +2,40 @@ name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag brazil-blog-web:$(date +%s)
+      - uses: actions/checkout@v4
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag brazil-blog-web:$(date +%s)
+
+  lint:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Lint the Python code
+        run: bin/lint-back
 
   test:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Collect static files
-      run: bin/manage collectstatic --noinput --ignore brazil_blog.css
-    - name: Test the Django / Wagtail project
-      run: bin/manage test
+      - uses: actions/checkout@v4
+      - name: Collect static files
+        run: bin/manage collectstatic --noinput --ignore brazil_blog.css
+      - name: Test the Django / Wagtail project
+        run: bin/manage test
 
   deploy:
-
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
 
@@ -42,14 +48,14 @@ jobs:
     needs: build
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Setup SSH
-      uses: webfactory/ssh-agent@v0.5.3
-      with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-    - name: Deploy to the server
-      run: |
-        ssh -o StrictHostKeyChecking=no -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd brazil-blog && git pull && docker compose -f docker-compose-deploy.yml up -d --build"
+      - uses: actions/checkout@v4
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: Deploy to the server
+        run: |
+          ssh -o StrictHostKeyChecking=no -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd brazil-blog && git pull && docker compose -f docker compose-deploy.yml up -d --build"
 
   smoketests:
     runs-on: ubuntu-latest
@@ -66,7 +72,7 @@ jobs:
           - 80:80
         options: >-
           --mount type=bind,source=${{ github.workspace }},target=/usr/share/nginx/html
-          
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
