chore: Add tropischeverrassing.fun to entrypoints

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -39,3 +39,45 @@ server {
     }
 
 }
+
+server {
+    listen 80;
+    server_name tropischeverrassing.fun;
+
+    # Location block for the Let's Encrypt challenge
+    location ^~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        try_files $uri =404;
+    }
+
+    # Redirect all other HTTP traffic to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name tropischeverrassing.fun;
+
+    ssl_certificate /etc/letsencrypt/live/tropischeverrassing.fun/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tropischeverrassing.fun/privkey.pem;
+
+    location /static/ {
+        root /usr/share/nginx/html;  # This path should lead to where your static directories are
+        expires 30d;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
+    # Dynamic content
+    location / {
+        proxy_pass http://brazil-blog-web:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        # proxy_hide_header Set-Cookie;  # Ensuring no cookies for cached pages
+    }
+
+}
