feat: Set maximum body size for file uploads to 20MB in Nginx configuration
Related to #94

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,6 +21,9 @@ server {
     ssl_certificate /etc/letsencrypt/live/brazil.kokokoding.nl/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/brazil.kokokoding.nl/privkey.pem;
 
+    # Set the max body size for file uploads to 20MB
+    client_max_body_size 20M;
+
     location /static/ {
         root /usr/share/nginx/html;  # This path should lead to where your static directories are
         expires 30d;
@@ -37,7 +40,6 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         # proxy_hide_header Set-Cookie;  # Ensuring no cookies for cached pages
     }
-
 }
 
 server {
@@ -63,6 +65,9 @@ server {
     ssl_certificate /etc/letsencrypt/live/tropischeverrassing.fun/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/tropischeverrassing.fun/privkey.pem;
 
+    # Set the max body size for file uploads to 20MB
+    client_max_body_size 20M;
+
     location /static/ {
         root /usr/share/nginx/html;  # This path should lead to where your static directories are
         expires 30d;
@@ -79,5 +84,4 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         # proxy_hide_header Set-Cookie;  # Ensuring no cookies for cached pages
     }
-
 }
